# POSD-HomeWork

./: CMakeLists.txt  DeviceAmount.cpp  FileDataParser.cpp  Fileloader.cpp  LogicSimulator.cpp  OutputHandler.cpp  TextUI.cpp  UserCommand.cpp  main.cpp
.cache/clangd/index/: Device.cpp.57339398966F9F84.idx  Device.cpp.85ADEC983B11F0F4.idx  Device.h.CB4D02949E8B1390.idx  Device.h.D66AACEF0EC87E1B.idx  DeviceAmount.cpp.05CFC6D802DB87FC.idx  DeviceAmount.cpp.73A3AA57D791F51F.idx  DeviceAmount.h.68A37920D7F7F7E3.idx  FileDataParser.cpp.E63BC94C7E5EC117.idx  FileDataParser.cpp.F93A38BCEE1FE66B.idx  FileDataParser.h.06ECA5462160B2A4.idx  Fileloader.cpp.63F4123D62A1444B.idx  Fileloader.cpp.9253FEFC652DF00D.idx  Fileloader.h.8256CD263981C0B5.idx  GateAND.cpp.355A5C688537D584.idx  GateAND.cpp.39EDBADFEF195094.idx  GateAND.cpp.E08B353095B1552D.idx  GateAND.h.14749E61498E48B8.idx  GateAND.h.F3D2B9EB9CD00247.idx  GateNOT.cpp.635899DEF1FA4331.idx  GateNOT.cpp.9B943872B94D0CE1.idx  (+43 more)
devices/: Device.cpp  GateAND.cpp  GateNOT.cpp  GateOR.cpp  OPin.cpp  iPin.cpp
include/: DeviceAmount.h  FileDataParser.h  Fileloader.h  LogicSimulator.h  LogicState.h  OutputHandler.h  StringParser.h  TextUI.h  UserCommand.h
include/devices/: Device.h  GateAND.h  GateNOT.h  GateOR.h  IPin.h  OPin.h
src/: FileDataParser.cpp  Fileloader.cpp  LogicSimulator.cpp  OutputHandler.cpp  StringParser.cpp  TextUI.cpp  UserCommand.cpp  main.cpp
src/devices/: Device.cpp  GateAND.cpp  GateNOT.cpp  GateOR.cpp  IPin.cpp  OPin.cpp
tests/: LogicSimulator_test.cpp  UserCommand_test.cpp  devices_test.cpp
